[gd_scene load_steps=6 format=3 uid="uid://cmvsqspnu8su0"]

[ext_resource type="Script" path="res://Main.gd" id="1_jr6ck"]
[ext_resource type="PackedScene" uid="uid://qdl1u80bht1r" path="res://goober.tscn" id="2_kttkn"]
[ext_resource type="PackedScene" uid="uid://drm35sf287aup" path="res://baddie.tscn" id="2_raeik"]
[ext_resource type="PackedScene" uid="uid://cob5wbqvd5xun" path="res://hud.tscn" id="4_udfm4"]

[sub_resource type="Curve2D" id="Curve2D_xlpsg"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 722, 0, 0, 0, 0, -2, 721, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_jr6ck")
mob_scene = ExtResource("2_raeik")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.211765, 0.105882, 0.360784, 1)

[node name="Goober" parent="." instance=ExtResource("2_kttkn")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartingPos" type="Marker2D" parent="."]
position = Vector2(200, 400)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_xlpsg")

[node name="MobSpawn" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_udfm4")]

[connection signal="hit" from="Goober" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
